--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,7 +71,10 @@
 html {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+  overscroll-behavior-y: none;  /* Prevent bounce effect */
+  scroll-behavior: smooth;  
 }
+
 
 body {
   -ms-overflow-style: none;  /* IE and Edge */
